[package]
name = "itermaps"
version = "0.2.0"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["iterator", "adapter"]
description = "Implement commonly used combinations of `Iterator::map`"

license = "MIT"
repository = "https://github.com/A4-Tacks/itermaps-rs"
homepage = "https://github.com/A4-Tacks/itermaps-rs"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
no_std = []

[dependencies]
