[package]
name = "itermaps"
version = "0.3.7"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["iterator", "map", "extension", "adapter"]
categories = ["no-std", "no-std::no-alloc"]
description = "Implement commonly used combinations of `Iterator::map`"

license = "MIT"
repository = "https://github.com/A4-Tacks/itermaps-rs"
homepage = "https://github.com/A4-Tacks/itermaps-rs"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
